aleracoes no quem somos

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -17,11 +17,14 @@
         </div>
 
         <div id="conteudo">
-            <h1>Quem Somos</h1>
-            <p>Somos a Beluska Diversões, uma empresa especializada em tornar momentos especiais ainda mais divertidos. Desde festas de aniversário até eventos corporativos, estamos aqui para proporcionar experiências únicas e inesquecíveis para você e seus convidados.</p>
-            <p>Nossa missão é criar momentos de alegria e diversão, garantindo qualidade e segurança em todos os nossos serviços. Contamos com uma equipe capacitada e dedicada, pronta para atender às suas necessidades e superar suas expectativas.</p>
-            <p>Explore nosso site para conhecer mais sobre nossos serviços, veja nossa galeria de eventos realizados e entre em contato conosco para solicitar um orçamento personalizado. Estamos ansiosos para fazer parte do seu próximo evento!</p>
+            <h1>NOSSA EQUIPE</h1>
+            <p>Contamos com uma equipe especializada e capacitada para tornar seu evento mais divertido e inesquecível.</p>
+            <p>CONTE COM A Beluska Diversões</p>
+            <p>Oferecemos um serviço 5 estrelas com uma equipe altamente atualizada e dedicada, pronta para garantir o sucesso de todos os tipos de eventos.</p>
+            <p>DEDICAÇÃO</p>
+            <p>Amamos o que fazemos e nos comprometemos com a felicidade de todos os nossos clientes. Para recreação infantil, conte com a Beluska Diversões.</p>
         </div>
+
 
         
     </div>
