Atualizações estilo,index,quen somos e serviços

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -17,13 +17,17 @@
         </div>
 
         <div id="conteudo">
-            <h1>NOSSA EQUIPE</h1>
-            <p>Contamos com uma equipe especializada e capacitada para tornar seu evento mais divertido e inesquecível.</p>
-            <p>CONTE COM A Beluska Diversões</p>
-            <p>Oferecemos um serviço 5 estrelas com uma equipe altamente atualizada e dedicada, pronta para garantir o sucesso de todos os tipos de eventos.</p>
-            <p>DEDICAÇÃO</p>
-            <p>Amamos o que fazemos e nos comprometemos com a felicidade de todos os nossos clientes. Para recreação infantil, conte com a Beluska Diversões.</p>
-        </div>
+    <div class="section-header">
+        <h1>NOSSA EQUIPE</h1>
+    </div>
+    <div class="section-content">
+        <p>Somos a Beluska Diversões, uma equipe especializada e apaixonada por tornar seu evento ainda mais divertido e memorável.</p>
+        <p>CONTE COM A Beluska Diversões</p>
+        <p>Oferecemos um serviço 5 estrelas com uma equipe altamente atualizada e dedicada, pronta para garantir o sucesso de todos os tipos de eventos.</p>
+        <p>DEDICAÇÃO</p>
+        <p>Amamos o que fazemos e nos dedicamos a proporcionar momentos de alegria e diversão para todos os nossos clientes. Para recreação infantil, conte com a Beluska Diversões.</p>
+    </div>
+</div>
 
 
         
