--- a/index.html
+++ b/index.html
@@ -75,11 +75,24 @@
             <button type="button" id="enviarWhatsapp">Solicitar Orçamento</button>
         </form>
 
+         <footer>
+        <div class="footer-container">
+            <div class="redes-sociais">
+                <a href="http://wa.me/5581985901320" target="_blank">
+                    <img src="imagens/whatsapp2.png" alt="WhatsApp" class="icone">
+                </a>
+                <a href="https://www.instagram.com/beluskadiversoes/" target="_blank">
+                    <img src="imagens/instagram.png" alt="Instagram" class="icone">
+                </a>
+            </div>
+            <div class="copyright">
+                &copy; 2024 Todos os direitos reservados. Desenvolvido por Beluska Diversões.
+            </div>
+        </div>
+    </footer>
+
     </div>
 
-    <a href="http://wa.me/5581985901320" target="_blank" class="whatsapp-icon">
-        <img src="caminho/para/seu/icone-whatsapp.png" alt="WhatsApp">
-    </a>
 
     <script>
         document.getElementById('enviarWhatsapp').addEventListener('click', function() {
