--- a/quem-somos.html
+++ b/quem-somos.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div id="principal">
+        <h1 class="titulo-principal">Beluska Diversões</h1>
+        
         <div id="menu">
             <a href="index.html" class="botao">HOME</a>
             <a href="quem-somos.html" class="botao ativo">QUEM SOMOS</a>
@@ -27,6 +29,23 @@
         <p>DEDICAÇÃO</p>
         <p>Amamos o que fazemos e nos dedicamos a proporcionar momentos de alegria e diversão para todos os nossos clientes. Para recreação infantil, conte com a Beluska Diversões.</p>
     </div>
+
+    <footer>
+        <div class="footer-container">
+            <div class="redes-sociais">
+                <a href="http://wa.me/5581985901320" target="_blank">
+                    <img src="imagens/whatsapp2.png" alt="WhatsApp" class="icone">
+                </a>
+                <a href="https://www.instagram.com/beluskadiversoes/" target="_blank">
+                    <img src="imagens/instagram.png" alt="Instagram" class="icone">
+                </a>
+            </div>
+            <div class="copyright">
+                &copy; 2024 Todos os direitos reservados. Desenvolvido por Beluska Diversões.
+            </div>
+        </div>
+    </footer>
+
 </div>
 
 
