Alteracao contato, estilo (foi colocado ajustes para melehorar expericencia no celular), foi criado uma classe script.js para pode ficar os codigo java script nele

--- a/galeria.html
+++ b/galeria.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Beluska Diversões - Galeria</title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
+    <style>
+        /* Estilos específicos podem ser adicionados aqui se necessário */
+    </style>
 </head>
 <body>
     <div id="principal">
+        <!-- Menu de navegação -->
         <div id="menu">
             <a href="index.html" class="botao">HOME</a>
             <a href="quem-somos.html" class="botao">QUEM SOMOS</a>
@@ -16,11 +20,13 @@
             <a href="contato.html" class="botao">CONTATO</a>
         </div>
         
+        <!-- Mensagem principal -->
         <div id="mensagem">
             <h2>Galeria de Fotos</h2>
             <p>Confira algumas fotos dos nossos eventos e diversões.</p>
         </div>
 
+        <!-- Galeria de fotos -->
         <div class="gallery">
             <div class="gallery-item">
                 <img src="imagens/imagem1.jpg" alt="Descrição da Imagem 1">
@@ -31,28 +37,13 @@
             <div class="gallery-item">
                 <img src="imagens/imagem3.jpg" alt="Descrição da Imagem 3">
             </div>
-            <div class="gallery-item">
-                <img src="imagens/imagem4.jpg" alt="Descrição da Imagem 3">
-            </div>
-            <div class="gallery-item">
-                <img src="imagens/imagem5.jpg" alt="Descrição da Imagem 3">
-            </div>
-            <div class="gallery-item">
-                <img src="imagens/imagem6.jpg" alt="Descrição da Imagem 3">
-            </div>
-            <div class="gallery-item">
-                <img src="imagens/imagem7.jpg" alt="Descrição da Imagem 3">
-            </div>
-            <div class="gallery-item">
-                <img src="imagens/imagem8.jpg" alt="Descrição da Imagem 3">
-            </div>
-            <div class="gallery-item">
-                <img src="imagens/imagem9.jpg" alt="Descrição da Imagem 3">
-            </div>
-            <div class="gallery-item">
-                <img src="imagens/imagem10.jpg" alt="Descrição da Imagem 3">
-            </div>
             <!-- Adicione mais itens conforme necessário -->
+        </div>
+
+        <!-- Formulário de orçamento -->
+        <div id="mensagem">
+            <h2>Formulário de Orçamento</h2>
+            <p>Para que possamos planejar e organizar uma experiência inesquecível em seu evento, por favor, preencha o formulário abaixo com as informações necessárias.</p>
         </div>
 
         <form id="formulario">
@@ -107,9 +98,8 @@
         </form>
     </div>
 
-
-
-   <footer>
+    <!-- Rodapé -->
+    <footer>
         <div class="footer-container">
             <div class="redes-sociais">
                 <a href="http://wa.me/5581985901320" target="_blank">
@@ -124,6 +114,10 @@
             </div>
         </div>
     </footer>
+
+    <!-- Script para enviar formulário via WhatsApp -->
+        <script src="script.js"></script>
+
 
 </body>
 </html>
