--- a/contato/contato.html
+++ b/contato/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beluska Diversões - Contato</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="styles-contato.css">
 </head>
 <body>
     <div id="principal">
@@ -13,11 +13,11 @@
         </header>
         
         <nav id="menu">
-            <a href="index.html" class="botao">HOME</a>
-            <a href="quem-somos.html" class="botao">QUEM SOMOS</a>
-            <a href="servicos.html" class="botao">NOSSOS SERVIÇOS</a>
-            <a href="galeria.html" class="botao">GALERIA</a>
-            <a href="contato.html" class="botao ativo">CONTATO</a>
+            <a href="/index.html" class="botao">HOME</a>
+            <a href="/quem-somos/quem-somos.html" class="botao">QUEM SOMOS</a>
+            <a href="/servicos/servicos.html" class="botao">NOSSOS SERVIÇOS</a>
+            <a href="/galeria/galeria.html" class="botao">GALERIA</a>
+            <a href="/contato/contato.html" class="botao ativo">CONTATO</a>
         </nav>
         
         <main id="conteudo">
@@ -57,10 +57,10 @@
             <div class="footer-container">
                 <div class="redes-sociais">
                     <a href="http://wa.me/5581985901320" target="_blank">
-                        <img src="imagens/whatsapp2.png" alt="WhatsApp" class="icone">
+                        <img src="/imagens/whatsapp2.png" alt="WhatsApp" class="icone">
                     </a>
                     <a href="https://www.instagram.com/beluskadiversoes/" target="_blank">
-                        <img src="imagens/instagram.png" alt="Instagram" class="icone">
+                        <img src="/imagens/instagram.png" alt="Instagram" class="icone">
                     </a>
                 </div>
                 <div class="copyright">
