--- a/quem-somos/quem-somos.html
+++ b/quem-somos/quem-somos.html
@@ -4,25 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem Somos - Beluska Diversões</title>
-    <link rel="stylesheet" href="estilo.css">
-    <style>
-        /* Estilos específicos para animação dos elementos */
-        .section-content p, .section-header h1 {
-            opacity: 0;
-            animation: fadeInAnimation 0.5s ease-in-out forwards;
-        }
-
-        @keyframes fadeInAnimation {
-            from {
-                opacity: 0;
-                transform: translateY(10px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles-quem-somos.css">
+    <link rel="stylesheet" href="animacao.css">
 </head>
 <body>
     <div id="principal">
@@ -31,11 +14,11 @@
         </header>
         
         <nav id="menu">
-            <a href="index.html" class="botao">HOME</a>
-            <a href="quem-somos.html" class="botao ativo">QUEM SOMOS</a>
-            <a href="servicos.html" class="botao">NOSSOS SERVIÇOS</a>
-            <a href="galeria.html" class="botao">GALERIA</a>
-            <a href="contato.html" class="botao">CONTATO</a>
+            <a href="/index.html" class="botao">HOME</a>
+            <a href="/quem-somos/quem-somos.html" class="botao ativo">QUEM SOMOS</a>
+            <a href="/servicos/servicos.html" class="botao">NOSSOS SERVIÇOS</a>
+            <a href="/galeria/galeria.html" class="botao">GALERIA</a>
+            <a href="/contato/contato.html" class="botao">CONTATO</a>
         </nav>
 
         <main id="conteudo">
@@ -58,7 +41,6 @@
                 <p>Na Beluska Diversões, oferecemos uma ampla variedade de serviços para tornar seu evento um sucesso:</p>
                 <ul>
                     <li>Animadores para festas</li>
-                    <li>Locação de brinquedos infláveis</li>
                     <li>Oficinas recreativas</li>
                     <li>Eventos corporativos</li>
                 </ul>
@@ -69,10 +51,10 @@
             <div class="footer-container">
                 <div class="redes-sociais">
                     <a href="http://wa.me/5581985901320" target="_blank">
-                        <img src="imagens/whatsapp2.png" alt="WhatsApp" class="icone">
+                        <img src="/imagens/whatsapp2.png" alt="WhatsApp" class="icone">
                     </a>
                     <a href="https://www.instagram.com/beluskadiversoes/" target="_blank">
-                        <img src="imagens/instagram.png" alt="Instagram" class="icone">
+                        <img src="/imagens/instagram.png" alt="Instagram" class="icone">
                     </a>
                 </div>
                 <div class="copyright">
